# Conversational-RAG-Assistant

./: Data_Ingestion.py  Generation.py  Processing.py  README.md  Vectorstore.py  app.py  main.py  pyproject.toml  requirements.txt
